--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/testbed.exe",
+            "program": "${workspaceFolder}/bin/sandbox.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/bin/",
@@ -16,7 +16,7 @@
             "name": "(Linux) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/testbed",
+            "program": "${workspaceFolder}/bin/sandbox",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/bin/",
