[+] Fixed VSCode script for building task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -45,7 +45,7 @@
                 "command": "${workspaceFolder}/build-all.sh"
             },
             "options": {
-                "cwd": "${workspaceFolder}/sandbox"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": [
                 "$gcc"
