--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,13 +10,34 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/bin/",
             "environment": [],
-            "console": "newExternalWindow"
+            "console": "integratedTerminal"
         },
         {
             "name": "(Linux) Launch",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/sandbox",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/bin/",
+            "environment": [],
+        },
+        {
+            "name": "(Windows) Launch Unit Tests",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/bin/tests.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/bin/",
+            "environment": [],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "(Linux) Launch Unit Tests",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/bin/tests",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/bin/",
